fix layout of posts lists, when moderator, on mobile

--- a/css/layout.less
+++ b/css/layout.less
@@ -30,6 +30,9 @@
     .post-editor-wrapper {
       display: none;
     }
+    > .edit-link {
+      display: none;
+    }
   });
 
 
